name:                plexams-cli
version:             0.9.0.0
synopsis:            Planning exams
description:         Please see README.md
homepage:            https://github.com/githubuser/plexams#readme
license:             BSD3
license-file:        LICENSE
author:              Oliver Braun
maintainer:          ob@obraun.net
copyright:           2016 Oliver Braun
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable plexams
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base  >= 4.7 && < 5
                     , directory
                     , optparse-applicative
                     , plexams-core
                     , plexams-generators
                     , plexams-gui
                     , time
  default-language:    Haskell2010

executable plexams-helper
  hs-source-dirs:      app
  main-is:             Helper.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base  >= 4.7 && < 5
                     , optparse-applicative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/obcode/plexams
