name:                plexams-cli
version:             0.9.0.0
synopsis:            Planning exams
description:         Please see README.md
homepage:            https://github.com/githubuser/plexams#readme
license:             BSD3
license-file:        LICENSE
author:              Oliver Braun
maintainer:          ob@obraun.net
copyright:           2016 Oliver Braun
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable plexams
  hs-source-dirs:      app
  main-is:             Plexams.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base  >= 4.7 && < 5
                     , plexams-cli
  default-language:    Haskell2010

executable plexams-helper
  hs-source-dirs:      app
  main-is:             Plexams-Helper.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base  >= 4.7 && < 5
                     , plexams-cli
  default-language:    Haskell2010

library
  exposed-modules:     Plexams.CLI.Commands
                     , Plexams.CLI.Config
                     , Plexams.CLI.Import
                     , Plexams.CLI.PlanManip
                     , Plexams.CLI.Types
                     , Plexams.CLI.Helper.Commands
                     , Plexams.CLI.Helper.Config
                     , Plexams.CLI.Helper.Types
  build-depends:       base
                     , directory
                     , optparse-applicative
                     , plexams-core
                     , plexams-generators
                     , plexams-gui
                     , time
                     , containers
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/obcode/plexams
