name:                  plexams-core
version:               0.9.0.0
synopsis:              Planning exams
description:           see Readme
homepage:              https://github.com/obcode/plexams#readme
license:               BSD3
license-file:          LICENSE
author:                Oliver Braun
maintainer:            ob@obraun.net
copyright:             2016-2017 Oliver Braun
category:              Plexams
build-type:            Simple
cabal-version:         >=1.10

library
  exposed-modules:     Plexams
                     , Plexams.Types
                     , Plexams.Export
                     , Plexams.Import
                     , Plexams.PlanManip
                     , Plexams.Query
                     , Plexams.Statistics
                     , Plexams.Validation
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , containers
                     , mtl
                     , time
                     , vector
                     , yaml
  default-language:    Haskell2010

test-suite plexamscore-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ImportSpec
                     , PlanManipSpec
  build-depends:       base
                     , hspec
                     , aeson
                     , bytestring
                     , containers
                     , time
                     , plexams-core
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/obcode/plexams
