name:                  plexams-generators
version:               0.9.0.0
synopsis:              Planning exams
description:           see Readme
homepage:              https://github.com/obcode/plexams#readme
license:               BSD3
license-file:          LICENSE
author:                Oliver Braun
maintainer:            ob@obraun.net
copyright:             2017 Oliver Braun
category:              Plexams
build-type:            Simple
cabal-version:         >=1.10

library
  exposed-modules:     Plexams.Generators.Rooms
                     , Plexams.Generators.Schedule
  build-depends:       base
                     , plexams-core
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/obcode/plexams
